# stag

./: .gitignore  .gitmodules  README.md  SUBMISSION.md  conftest.py  pyproject.toml
.cursor/rules/: module-boundaries.mdc  tdd-workflow.mdc
core/: __init__.py  config.py  ground_truth.py  interfaces.py  scoring.py  serialization.py  types.py
data/: __init__.py  loader.py
data/services/: __init__.py  indexing.py  parsing.py  sampling.py  splitting.py
data/tests/: conftest.py  test_indexing.py  test_loader.py  test_parsing.py  test_sampling.py  test_splitting.py
eval/: __init__.py  evaluator.py
eval/services/: __init__.py  aggregators.py  batch_scoring.py  candidates.py  metrics.py  policy_comparison.py  ranking.py  sampling.py
eval/tests/: test_aggregators.py  test_batch_scoring.py  test_candidates.py  test_evaluator.py  test_metrics.py  test_policy_comparison.py  test_ranking.py
experiments/: __init__.py  cli.py  config.py  pipeline.py
experiments/configs/: benchmark.json  prototype.json
experiments/results/prototype/: comparison.csv  comparison.json  policy_tradeoff.json  resolved_config.json
experiments/services/: __init__.py  evaluation.py  loading.py  policy_analysis.py  results.py  training.py
experiments/tests/: conftest.py  test_cli.py  test_config.py  test_evaluation.py  test_pipeline.py  test_policy_analysis.py  test_results.py  test_train_step.py
models/: __init__.py
models/mf/: __init__.py  model.py
models/mf/services/: __init__.py  artifact.py  embeddings.py  loss.py  training.py
models/mf/tests/: conftest.py  test_embeddings.py  test_model.py  test_training.py
models/neumf/: __init__.py  model.py
models/neumf/services/: __init__.py  artifact.py  loss.py  network.py  training.py
models/neumf/tests/: conftest.py  test_neumf_model.py  test_neumf_network.py  test_neumf_training.py
prompts/: 0_initial_meta_prompt.md  1_architecture.md  2_data_followup.md  2_data_init.md  3_mf_model_followup.md  3_mf_model_init.md  3_naive_model_followup.md  3_naive_model_init.md  4_neumf_model_followup.md  4_neumf_model_init.md  4_ref_model_followup.md  4_ref_model_init.md  5_evaluation_followup.md  5_evaluation_init.md  6_experiments_followup.md  6_experiments_init.md  7_api_followup.md  7_api_init.md  8_frontend_followup.md  8_frontend_init.md  README.md
scripts/: generate_ratings_local.py
src/: __init__.py
src/core/: __init__.py  config.py  interfaces.py  scoring.py  serialization.py  types.py
tests/: test_config.py  test_conftest_fixture.py  test_core_contracts.py  test_generate_ratings_local.py  test_ground_truth.py  test_import_boundaries.py  test_interfaces.py  test_scoring.py  test_scoring_golden.py  test_serialization.py  test_types.py
