[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reciprocal-rec"
version = "0.1.0"
description = "Modular reciprocal recommendation system built on the Reciprocal Embedding Framework (REF)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.setuptools]
packages = ["core"]
package-dir = { "core" = "src/core" }

[tool.pytest.ini_options]
# Discover the top-level tests/ dir and any per-module test directories
# (e.g. data/tests, models/mf/tests) that downstream chats add.
testpaths = ["tests", "data", "models", "eval", "experiments"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
files = ["src", "tests", "conftest.py"]

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
