[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reciprocal-rec"
version = "0.1.0"
description = "Modular reciprocal recommendation system built on the Reciprocal Embedding Framework (REF)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "import-linter",
]

[tool.setuptools]
packages = [
    "core",
    "data",
    "data.services",
    "eval",
    "models",
    "models.mf",
    "models.mf.services",
    "experiments",
]

[tool.pytest.ini_options]
testpaths = ["tests", "data", "models", "eval", "experiments"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["core", "data", "eval", "models", "experiments", "tests", "conftest.py"]

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "data", "eval", "models", "experiments", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.importlinter]
root_packages = [
    "core",
    "data",
    "eval",
    "models",
    "experiments",
]

[[tool.importlinter.contracts]]
name = "core is independent"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = [
    "data",
    "eval",
    "models",
    "experiments",
]

[[tool.importlinter.contracts]]
name = "eval must not import models or data"
type = "forbidden"
source_modules = ["eval"]
forbidden_modules = [
    "models",
    "data",
]

[[tool.importlinter.contracts]]
name = "models must not import eval or data"
type = "forbidden"
source_modules = ["models"]
forbidden_modules = [
    "eval",
    "data",
]

[[tool.importlinter.contracts]]
name = "data must not import models or eval"
type = "forbidden"
source_modules = ["data"]
forbidden_modules = [
    "models",
    "eval",
]

[[tool.importlinter.contracts]]
name = "experiments imports only public surfaces"
type = "forbidden"
source_modules = ["experiments"]
forbidden_modules = [
    "data.services",
    "models.mf",
    "models.neumf",
]
